--- a/Simbirsoft_workshop/app/src/main/res/layout/item_view_pager.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/item_view_pager.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rv_search_result"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white"
+    tools:listitem="@layout/item_search_result">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_search_result"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/item_search_result"
-        android:background="@color/white"/>
-
-</FrameLayout>
+</androidx.recyclerview.widget.RecyclerView>
