--- a/Simbirsoft_workshop/app/src/main/res/layout/item_help.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/item_help.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_item_help"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toTopOf="@id/tv_item_help"
         app:layout_constraintEnd_toEndOf="parent"
