--- a/Simbirsoft_workshop/app/src/main/res/layout/fragment_news.xml
+++ b/Simbirsoft_workshop/app/src/main/res/layout/fragment_news.xml
@@ -44,6 +44,18 @@
         app:layout_constraintBottom_toTopOf="@id/bnv_news"
         app:layout_constraintTop_toBottomOf="@id/app_bar_news" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar_news"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/CircularProgress"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="visible"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/app_bar_news" />
+
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bnv_news"
         android:layout_width="match_parent"
